Prevent indexView table headers from wrapping

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -317,6 +317,8 @@ footer a {
 
   td a { color: inherit; }
 
+  thead th { white-space: nowrap; }
+
   th.percent { width: 25%; }
 
   td.percent {
